--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack-dev-server --progress --colors --inline --hot",
+    "production": "webpack --progress -p"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +16,9 @@
     "babel-loader": "^6.2.10",
     "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-2": "^6.24.1",
     "bootstrap": "^4.1.3",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
